# KYC-AML_Microservice

./: .env.docker  .env.example  .gitignore  CI_CD_FIXES_COMPLETE.md  Dockerfile  Dockerfile.worker  PIPELINE_FIXES_SUMMARY.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.tasks.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflow-templates/: fastapi-ci.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  performance.yml  security.yml
.kiro/specs/kyc-aml-microservice/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
alembic/: env.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py  worker.py
app/api/: deps.py
app/api/middleware/: __init__.py  webhook_auth.py
app/api/v1/: __init__.py  auth.py  gdpr.py  kyc.py  users.py  webhooks.py
app/core/: config.py  exceptions.py  security.py
app/models/: __init__.py  base.py  kyc.py  user.py  webhook.py
app/repositories/: __init__.py  base.py  kyc_repository.py  user_repository.py  webhook_repository.py
app/schemas/: __init__.py  auth.py  kyc.py  user.py  webhook.py
app/services/: auth_service.py  gdpr_service.py  kyc_integration_example.py  kyc_service.py  mock_provider.py  mock_webhook_sender.py  webhook_service.py
app/tasks/: __init__.py  base.py  kyc_tasks.py  webhook_tasks.py
app/utils/: encryption.py  logging.py  task_monitoring.py  webhook_security.py
docs/: ci-cd-setup.md  ci-cd-usage-examples.md  docker-deployment.md  security-features.md  webhook_simulation.md
examples/: ci-cd-test-example.md
scripts/: cleanup-demo.sh  demo-ci-pipeline.sh  docker-build.sh  docker-deploy.sh  fix-pipeline-issues.py  fix-remaining-issues.py  quick-fix.sh  test-docker-deployment.sh  test_tasks.py  test_webhook_simulation.py  validate-ci-setup.py  validate-ci.sh
tests/: conftest.py
tests/integration/: test_auth_api.py  test_encryption_models.py  test_gdpr_api.py  test_kyc_api.py  test_kyc_tasks.py  test_user_api.py  test_webhook_api.py  test_webhook_simulation.py
tests/unit/test_api/: __init__.py
tests/unit/test_api/test_middleware/: __init__.py  test_webhook_auth.py
tests/unit/test_core/: test_security.py
tests/unit/test_models/: test_kyc.py  test_user.py  test_webhook.py
tests/unit/test_repositories/: __init__.py  test_kyc_repository.py  test_user_repository.py  test_webhook_repository.py
tests/unit/test_services/: __init__.py  test_auth_service.py  test_gdpr_service.py  test_kyc_integration_example.py  test_kyc_service.py  test_mock_provider.py  test_webhook_service.py
tests/unit/test_tasks/: __init__.py  test_base.py  test_kyc_tasks.py  test_monitoring.py  test_worker.py
tests/unit/test_utils/: test_encryption.py  test_logging_masking.py  test_task_monitoring.py  test_webhook_security.py
